button alignment fix

--- a/gallatin/style.css
+++ b/gallatin/style.css
@@ -2663,7 +2663,7 @@ background-color: #b51111;}
 
 
 #widesearchform input[type="button"],
-#widesearchform input[type="submit"], button[type="submit"], button[type="reset"] {
+#widesearchform input[type="submit"], button[type="submit"], button[type="reset"], #edit-search-block-form--2{
   padding: 13px 15px 12px 15px;
   border: none;
   outline: none;
